[Sprint 1] Init Structure MVVM in Project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">CakeZy</string>
+    <string name="app_name">Cakezy</string>
+    <string name="create_cake">Create Cake</string>
+    <string name="save">Save</string>
 </resources>
